--- a/cat-home/src/main/resources/onelogin.saml.properties
+++ b/cat-home/src/main/resources/onelogin.saml.properties
@@ -16,7 +16,7 @@ onelogin.saml2.sp.entityid = https://cat-dev.devops.xiaohongshu.com/cat/jsp/sso/
 #  returned to the requester, in this case our SP.
 # URL Location where the <Response> from the IdP will be returned
 #onelogin.saml2.sp.assertion_consumer_service.url = http://localhost:8080/cat/jsp/sso/acs.jsp
-onelogin.saml2.sp.assertion_consumer_service.url = https://cat-dev.devops.xiaohongshu.com/cat/r
+onelogin.saml2.sp.assertion_consumer_service.url = https://cat-dev.devops.xiaohongshu.com
 
 # SAML protocol binding to be used when returning the <Response>
 # message.  Onelogin Toolkit supports for this endpoint the
